# MalCompare

./: README.md  authorship_statement.txt
comparison_framework/: compare_tools.sh
malcompare/: compare_tools.sh  prediction.py  tool_config.json
scripts/: compare_tools.sh  cross_validation.sh  download_contagio.sh  generate_ground_truth.sh  generate_tool_config_file.py  prediction.py  setup.sh  split.sh  tool_config.json  vm setup instructions.txt
scripts/hidost/: run_hidost.sh
scripts/pjscan/: download_and_install_pjscan.sh  pjscan_cv.sh  pjscan_split.sh  run.sh  train.sh  train_pjscan.sh
tools/hidost/: README.rst  run.sh  run_hidost.sh  stored_hidost_output.txt
tools/hidost/hidost-part-1/: list_of_hashes.txt  pathList.py  virusTotalComparison.py
tools/mimicus/: README  mimicus_cross_validate.py  mimicus_run_all_experiments.sh  run.sh  run_mimicus.sh  run_pdfrate.sh  setup_mimicus.sh  stored_pdfrate_output.txt
tools/mimicus/.git (original)/: config  packed-refs
tools/pdfrate/: README  run_pdfrate.sh
tools/pjscan/: README  install.sh  pjscan_model.model  run.sh  run_pjscan.sh  stored_pjscan_output.txt  train.sh  train_pjscan.sh
tools/pjscan/libpdfjs/: CMakeLists.txt  INSTALL  README
tools/pjscan/libpdfjs/.svn/: all-wcprops  entries
tools/pjscan/libpdfjs/.svn/text-base/: CHANGELOG.svn-base
tools/pjscan/libpdfjs/api/.svn/: all-wcprops  entries
tools/pjscan/libpdfjs/api/.svn/text-base/: CMakeLists.txt.svn-base  PdfJsExtractor.i.svn-base
tools/pjscan/libpdfjs/src/: CMakeLists.txt
tools/pjscan/libpdfjs/src/.svn/: all-wcprops  entries
tools/pjscan/libpdfjs/src/.svn/text-base/: PdfJsExtractor.cpp.svn-base  PdfJsExtractor.h.svn-base
tools/pjscan/libpdfjs/test/: test.cpp  test.py
tools/pjscan/libpdfjs/test/.svn/: all-wcprops  entries
tools/pjscan/libpdfjs/test/.svn/text-base/: CMakeLists.txt.svn-base
tools/pjscan/libstem/src/: CMakeLists.txt  Kernel.h  NGramItem.cpp  util.h
tools/pjscan/libstem/src/.svn/: all-wcprops  entries
tools/pjscan/libstem/src/.svn/text-base/: Kernel.cpp.svn-base  NGram.cpp.svn-base  NGram.h.svn-base  NGramConf.cpp.svn-base  NGramConf.h.svn-base  NGramItem.h.svn-base  util.cpp.svn-base
tools/pjscan/libstem/test/: CMakeLists.txt  KernelTest.cpp
tools/pjscan/libstem/test/.svn/: all-wcprops  entries
tools/pjscan/libstem/test/.svn/text-base/: NGramTest.cpp.svn-base
tools/pjscan/libsvm_oc/src/: CMakeLists.txt  libsvm.cpp
tools/pjscan/libsvm_oc/src/.svn/: all-wcprops  entries
tools/pjscan/libsvm_oc/src/.svn/text-base/: SvmOc.cpp.svn-base  SvmOc.h.svn-base  libsvm.h.svn-base
tools/pjscan/pjscan/: CHANGELOG  CMakeLists.txt  INSTALL  README
tools/pjscan/pjscan-js/: CMakeLists.txt  INSTALL  README
tools/pjscan/pjscan-js/.svn/: all-wcprops  entries
tools/pjscan/pjscan-js/.svn/text-base/: pjscan-js.patch.svn-base
tools/pjscan/pjscan-js/js-1.8.5/js/src/: jsscan.cpp  jsscan.h
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/: Makefile  config.cache  config.status  host_jskwgen  host_jsoplengen  js  js-confdefs.h  js-config  jscpucfg
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/.deps/: ARMAssembler.pp  Allocator.pp  Assembler.pp  Assertions.pp  CodeAlloc.pp  Compiler.pp  Containers.pp  ExecutableAllocator.pp  ExecutableAllocatorOS2.pp  ExecutableAllocatorPosix.pp  ExecutableAllocatorWin.pp  FastArithmetic.pp  FastOps.pp  Fragmento.pp  FrameState.pp  ImmutableSync.pp  InvokeHelpers.pp  LIR.pp  Logging.pp  MacroAssemblerARM.pp  MacroAssemblerX86Common.pp  MethodJIT.pp  MonoIC.pp  NativeX64.pp  PolyIC.pp  RegAlloc.pp  RegexCompiler.pp  RegexJIT.pp  Retcon.pp  StubCalls.pp  StubCompiler.pp  TrampolineCompiler.pp  VMPI.pp  Writer.pp  avmplus.pp  checks.pp  conversions.pp  diy-fp.pp  fast-dtoa.pp  jsanalyze.pp  (+63 more)
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/config/: Makefile  autoconf.mk  nsinstall
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/config/mkdepend/: Makefile
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/config/system_wrappers_js/: icc34.h  lcms.h
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/editline/: Makefile
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/editline/.deps/: editline.pp  sysunix.pp
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/jsapi-tests/: Makefile  jsapi-tests
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/jsapi-tests/.deps/: selfTest.pp  testBug604087.pp  testClassGetter.pp  testCloneScript.pp  testConservativeGC.pp  testContexts.pp  testCustomIterator.pp  testDebugger.pp  testDeepFreeze.pp  testDefineGetterSetterNonEnumerable.pp  testDefineProperty.pp  testExtendedEq.pp  testFuncCallback.pp  testGCChunkAlloc.pp  testGetPropertyDefault.pp  testIntString.pp  testLookup.pp  testNewObject.pp  testOps.pp  testPropCache.pp  testSameValue.pp  testScriptObject.pp  testSetProperty.pp  testThreadGC.pp  testThreads.pp  testTrap.pp  testUTF8.pp  testVersion.pp  testXDR.pp  tests.pp
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/lirasm/: Makefile
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/shell/: Makefile  js
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/shell/.deps/: js.pp  jsworkers.pp
tools/pjscan/pjscan-js/js-1.8.5/js/src/build-release/tests/: Makefile
tools/pjscan/pjscan/.svn/: all-wcprops  entries
tools/pjscan/pjscan/src/: FeaturePrinter.cpp  FeaturePrinter.h  JsDumper.h  Learner.h  ThreadPool.cpp  ThreadPool.h  pjscan-child.cpp  pjscan.cpp  timing.cpp  timing.h  tokens.cpp  tokens.h
tools/pjscan/pjscan/src/.svn/: all-wcprops  entries
tools/pjscan/pjscan/src/.svn/text-base/: CMakeLists.txt.svn-base  Classifier.cpp.svn-base  Classifier.h.svn-base  JsDumper.cpp.svn-base  Learner.cpp.svn-base  ThreadSafeMap.cpp.svn-base  ThreadSafeMap.h.svn-base  WorkerThread.cpp.svn-base  WorkerThread.h.svn-base
tools/slayer/: COPYRIGHT.txt  ORIGINAL_README.txt  README.txt  __init__.py  classification.py  classifier_contagio_trained.p  clustering.py  cross_validation.sh  features.py  logs.py  results.py  run.sh  run_slayer.sh  slayer.py  split_train_test.py  stored_slayer_output.txt
(+71 files in other folders)
